# parallel-processing-mandelbrot.rs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml
benches/: benchmark.rs
src/: lib.rs  main.rs
