[package]
name = "parallel-processing-mandelbrot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "./src/lib.rs"

[dependencies]
num="0.1.27"
crossbeam = "0.8.0"
image="0.23.12"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
